--- a/PhotoShowdownBackend/PhotoShowdownBackend/appsettings.json
+++ b/PhotoShowdownBackend/PhotoShowdownBackend/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=PhotoShowdown;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
