--- a/PhotoShowdownBackend/PhotoShowdownBackend/appsettings.json
+++ b/PhotoShowdownBackend/PhotoShowdownBackend/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "0j34H%#$H457h&*J#$5J&%#$&H@$%JJKJ@&%$@$J&%"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=PhotoShowdown;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
   },
