Connect to local SQL server

--- a/PhotoShowdownBackend/PhotoShowdownBackend/appsettings.json
+++ b/PhotoShowdownBackend/PhotoShowdownBackend/appsettings.json
@@ -3,7 +3,7 @@
     "Token": "0j34H%#$H457h&*J#$5J&%#$&H@$%JJKJ@&%$@$J&%"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=PhotoShowdown;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    "DefaultConnection": "data source=.;initial catalog=PhotoShowdownDB;trusted_connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true"
   },
   "Logging": {
     "LogLevel": {
