--- a/photo-showdown-frontend/package.json
+++ b/photo-showdown-frontend/package.json
@@ -4,6 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:dotnet": "cd ../PhotoShowdownBackend/PhotoShowdownBackend && dotnet run",
+    "start:dev": "npm run start | npm run start:dotnet",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
