--- a/PhotoShowdownBackend/PhotoShowdownBackend/PhotoShowdownBackend.csproj
+++ b/PhotoShowdownBackend/PhotoShowdownBackend/PhotoShowdownBackend.csproj
@@ -28,4 +28,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\pictures\" />
+  </ItemGroup>
+
 </Project>
