--- a/PhotoShowdownBackend/PhotoShowdownBackend/PhotoShowdownBackend.csproj
+++ b/PhotoShowdownBackend/PhotoShowdownBackend/PhotoShowdownBackend.csproj
@@ -40,6 +40,7 @@
 
   <ItemGroup>
     <None Remove="SQL\07_CreateRoundsTable.sql" />
+    <None Remove="SQL\08_AddMatchSettingsToMatch.sql" />
   </ItemGroup>
 
 </Project>
