Round + Sentences related bug fixes

--- a/PhotoShowdownBackend/PhotoShowdownBackend/PhotoShowdownBackend.csproj
+++ b/PhotoShowdownBackend/PhotoShowdownBackend/PhotoShowdownBackend.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <None Remove="SQL\07_CreateRoundsTable.sql" />
     <None Remove="SQL\08_AddMatchSettingsToMatch.sql" />
+    <None Remove="SQL\09_RoundsSentencesFixes.sql" />
   </ItemGroup>
 
 </Project>
