Create RoundPictures table and repository

--- a/PhotoShowdownBackend/PhotoShowdownBackend/PhotoShowdownBackend.csproj
+++ b/PhotoShowdownBackend/PhotoShowdownBackend/PhotoShowdownBackend.csproj
@@ -39,10 +39,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="SQL\07_CreateRoundsTable.sql" />
-    <None Remove="SQL\08_AddMatchSettingsToMatch.sql" />
-    <None Remove="SQL\09_RoundsSentencesFixes.sql" />
-    <None Remove="SQL\10_DateToDateTime.sql" />
+    <None Remove="SQL\*" />
   </ItemGroup>
-
 </Project>
