--- a/photo-showdown-frontend/angular.json
+++ b/photo-showdown-frontend/angular.json
@@ -81,13 +81,13 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "photo-showdown-frontend:build:production"
+              "browserTarget": "photo-showdown-frontend:build:production"
             },
             "development": {
-              "buildTarget": "photo-showdown-frontend:build:development"
+              "browserTarget": "photo-showdown-frontend:build:development"
             },
             "tunnel": {
-              "buildTarget": "photo-showdown-frontend:build:tunnel"
+              "browserTarget": "photo-showdown-frontend:build:tunnel"
             }
           },
           "defaultConfiguration": "development"
@@ -95,7 +95,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "photo-showdown-frontend:build"
+            "browserTarget": "photo-showdown-frontend:build"
           }
         },
         "test": {
