--- a/.github/workflows/angular-unit-tests.yml
+++ b/.github/workflows/angular-unit-tests.yml
@@ -2,7 +2,7 @@ name: Angular Unit Tests
 
 on:
   pull_request:
-    branches: [ dev, rc, prod ]
+    branches: [dev, rc, prod]
 
 jobs:
   unit-test:
@@ -14,14 +14,15 @@ jobs:
 
     timeout-minutes: 5
 
+    defaults:
+      run:
+        working-directory: ./photo-showdown-frontend
+
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-
-      - name: Set Working Directory
-        run: cd photo-showdown-frontend
 
       - name: Install dependencies
         run: npm ci
