--- a/.github/workflows/angular-unit-tests.yml
+++ b/.github/workflows/angular-unit-tests.yml
@@ -1,4 +1,4 @@
-name: Angular Unit Tests
+name: Angular Lint and Prettier
 
 on:
   pull_request:
@@ -36,5 +36,5 @@ jobs:
       - name: Run Build
         run: npm run build --if-present
 
-      - name: Run Unit Tests
-        run: npm run test:ci
+      # - name: Run Unit Tests
+      #   run: npm run test:ci
