--- a/.github/workflows/backend-unit-tests.yml
+++ b/.github/workflows/backend-unit-tests.yml
@@ -19,9 +19,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup .NET
-        uses: actions/setup-dotnet@v1
+        uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: "8.0.0" # Replace with your desired .NET version
+          dotnet-version: "8.0.x"
 
       - name: Restore dependencies
         run: dotnet restore
